@@ -1620,6 +1620,9 @@ name|rm1Url
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// standby RM links /conf, /stacks, /logLevel, /metrics, /jmx,
+comment|// /static, /logs, /cluster/cluster as well as webService
+comment|// /ws/v1/cluster/info should not be redirected to active RM
 name|header
 operator|=
 name|getHeader
@@ -1629,6 +1632,132 @@ argument_list|,
 name|rm2Url
 operator|+
 literal|"/cluster/cluster"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+name|header
+operator|=
+name|getHeader
+argument_list|(
+literal|"Refresh"
+argument_list|,
+name|rm2Url
+operator|+
+literal|"/conf"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+name|header
+operator|=
+name|getHeader
+argument_list|(
+literal|"Refresh"
+argument_list|,
+name|rm2Url
+operator|+
+literal|"/stacks"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+name|header
+operator|=
+name|getHeader
+argument_list|(
+literal|"Refresh"
+argument_list|,
+name|rm2Url
+operator|+
+literal|"/logLevel"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+name|header
+operator|=
+name|getHeader
+argument_list|(
+literal|"Refresh"
+argument_list|,
+name|rm2Url
+operator|+
+literal|"/metrics"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+name|header
+operator|=
+name|getHeader
+argument_list|(
+literal|"Refresh"
+argument_list|,
+name|rm2Url
+operator|+
+literal|"/jmx"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+name|header
+operator|=
+name|getHeader
+argument_list|(
+literal|"Refresh"
+argument_list|,
+name|rm2Url
+operator|+
+literal|"/static"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|null
+argument_list|,
+name|header
+argument_list|)
+expr_stmt|;
+name|header
+operator|=
+name|getHeader
+argument_list|(
+literal|"Refresh"
+argument_list|,
+name|rm2Url
+operator|+
+literal|"/logs"
 argument_list|)
 expr_stmt|;
 name|assertEquals
