@@ -44,6 +44,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
 name|javax
 operator|.
 name|inject
@@ -126,6 +136,20 @@ name|com
 operator|.
 name|google
 operator|.
+name|common
+operator|.
+name|collect
+operator|.
+name|Sets
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|google
+operator|.
 name|inject
 operator|.
 name|Injector
@@ -176,6 +200,34 @@ name|long
 name|serialVersionUID
 init|=
 literal|1L
+decl_stmt|;
+comment|// define a set of URIs which do not need to do redirection
+DECL|field|NON_REDIRECTED_URIS
+specifier|private
+specifier|static
+specifier|final
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|NON_REDIRECTED_URIS
+init|=
+name|Sets
+operator|.
+name|newHashSet
+argument_list|(
+literal|"/conf"
+argument_list|,
+literal|"/stacks"
+argument_list|,
+literal|"/logLevel"
+argument_list|,
+literal|"/metrics"
+argument_list|,
+literal|"/jmx"
+argument_list|,
+literal|"/logs"
+argument_list|)
 decl_stmt|;
 annotation|@
 name|Inject
@@ -276,34 +328,11 @@ operator|.
 name|isStandby
 argument_list|()
 operator|&&
-operator|!
-name|uri
-operator|.
-name|equals
+name|shouldRedirect
 argument_list|(
-literal|"/"
-operator|+
 name|rmWebApp
-operator|.
-name|wsName
-argument_list|()
-operator|+
-literal|"/v1/cluster/info"
-argument_list|)
-operator|&&
-operator|!
+argument_list|,
 name|uri
-operator|.
-name|equals
-argument_list|(
-literal|"/"
-operator|+
-name|rmWebApp
-operator|.
-name|name
-argument_list|()
-operator|+
-literal|"/cluster"
 argument_list|)
 condition|)
 block|{
@@ -377,6 +406,58 @@ argument_list|,
 name|chain
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|shouldRedirect (RMWebApp rmWebApp, String uri)
+specifier|private
+name|boolean
+name|shouldRedirect
+parameter_list|(
+name|RMWebApp
+name|rmWebApp
+parameter_list|,
+name|String
+name|uri
+parameter_list|)
+block|{
+return|return
+operator|!
+name|uri
+operator|.
+name|equals
+argument_list|(
+literal|"/"
+operator|+
+name|rmWebApp
+operator|.
+name|wsName
+argument_list|()
+operator|+
+literal|"/v1/cluster/info"
+argument_list|)
+operator|&&
+operator|!
+name|uri
+operator|.
+name|equals
+argument_list|(
+literal|"/"
+operator|+
+name|rmWebApp
+operator|.
+name|name
+argument_list|()
+operator|+
+literal|"/cluster"
+argument_list|)
+operator|&&
+operator|!
+name|NON_REDIRECTED_URIS
+operator|.
+name|contains
+argument_list|(
+name|uri
+argument_list|)
+return|;
 block|}
 block|}
 end_class
